[gd_scene load_steps=4 format=3 uid="uid://bj2gep5kmclug"]

[ext_resource type="Script" path="res://script/UI/menu/gameover.gd" id="1_28wlb"]
[ext_resource type="FontFile" uid="uid://xg47m55sxhbx" path="res://object/font/pc_9800_bold.ttf" id="1_kanyc"]
[ext_resource type="FontFile" uid="uid://dmvkns7s48n77" path="res://object/font/pc_9800.ttf" id="2_q7y8m"]

[node name="gameover" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28wlb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 120.0
offset_right = 480.0
offset_bottom = 300.0
color = Color(0, 0, 0, 0.372549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 144.0
offset_right = 398.0
offset_bottom = 273.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kanyc")
text = "　　もう一度やる？"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 13

[node name="retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q7y8m")
text = "リトライ"
flat = true

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q7y8m")
text = "やめる"
flat = true

[connection signal="mouse_entered" from="VBoxContainer/retry" to="." method="_on_mouse_entered" binds= [0]]
[connection signal="mouse_exited" from="VBoxContainer/retry" to="." method="_on_retry_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/quit" to="." method="_on_mouse_entered" binds= [1]]
[connection signal="mouse_exited" from="VBoxContainer/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
